# sdl-test

./: CMakeLists.txt  README.md  data.h  main.c  opengl_test.c  sdl_test.c  stb_image.h
models/: cube.c  cube.h
opengl/: camera.c  camera.h  cglm_ext.h  cubemap.c  cubemap.h  file_util.c  file_util.h  gl_ext.c  gl_ext.h  light.c  light.h  material.h  model.c  model.h  scene.c  scene.h  scene_object.c  scene_object.h  scene_screen.c  scene_screen.h  scene_types.h  sdl_ext.c  sdl_ext.h  shader.c  shader.h  skybox.h  stb_image.h  texture.c  texture.h
shaders/: bag_fragment.glsl  bag_vertex.glsl  cube_fragment.glsl  cube_vertex.glsl  fragment.glsl  indexed_color_fragment.glsl  light_fragment.glsl  light_vertex.glsl  model_fragment.glsl  scene_screen_fragment.glsl  scene_screen_vertex.glsl  selection_fragment.glsl  selection_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
